feat: add last data changes
